Modificando un poco

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+span {}
+
 .title {
     color: #738f93;
     font-size: 40px;
@@ -122,9 +124,18 @@ body {
 }
 
 .back-home {
-    text-decoration: underline;
+    background-color: #1ba94c;
+    color: #ffffff;
+    border-radius: 4px;
+    box-shadow: 0 4px 12px rgb(27 169 76 / 50%);
+    font-size: 18.005px;
+    padding-left: 1.528em;
+    padding-right: 1.528em;
+    padding-top: 0;
+    padding-bottom: 0;
+    min-height: 2.778em;
+    border: none;
     cursor: pointer;
-    font-size: 15px;
 }
 
 @media (max-width: 768px) {
